--- a/CodigoFuente/x32/Orbita/Orbita.PruebasUnitarias/Orbita.PruebasUnitarias.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.PruebasUnitarias/Orbita.PruebasUnitarias.csproj
@@ -40,15 +40,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="Orbita.BBDD">
-      <HintPath>..\..\..\..\Librerias\CodigoFuente\x32\Comun\Orbita\Orbita.BBDD.dll</HintPath>
-    </Reference>
-    <Reference Include="Orbita.Trazabilidad">
-      <HintPath>..\..\..\..\Librerias\CodigoFuente\x32\Comun\Orbita\Orbita.Trazabilidad.dll</HintPath>
-    </Reference>
-    <Reference Include="Orbita.Utiles, Version=13.11.8.1, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\..\..\..\Librerias\CodigoFuente\x32\Comun\Orbita\Orbita.Utiles.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -76,6 +67,20 @@
     <Compile Include="OEvaluacionObjetos\OStringEnumTest.cs" />
     <Compile Include="OPriorityQueue\OPriorityQueueTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Orbita.BBDD\Orbita.BBDD.csproj">
+      <Project>{CF7F04AE-7DA5-48C5-BB08-DC57D3192A2D}</Project>
+      <Name>Orbita.BBDD</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Trazabilidad\Orbita.Trazabilidad.csproj">
+      <Project>{1A2EEC44-A494-4BA6-A591-267B73A55CD1}</Project>
+      <Name>Orbita.Trazabilidad</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Utiles\Orbita.Utiles.csproj">
+      <Project>{DAD5D2A3-9C23-4C22-ABEB-4DF8258170AD}</Project>
+      <Name>Orbita.Utiles</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
