--- a/CodigoFuente/x32/Orbita.VA/Orbita.VA.Comun/Orbita.VA.Comun.csproj
+++ b/CodigoFuente/x32/Orbita.VA/Orbita.VA.Comun/Orbita.VA.Comun.csproj
@@ -142,7 +142,7 @@
     <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AForge.Video.FFMPEG">
+    <Reference Include="AForge.Video.FFMPEG, Version=2.2.4.0, Culture=neutral, PublicKeyToken=03563089b1be05dd, processorArchitecture=x86">
       <HintPath>..\..\Comun\VA\AForge\AForge.Video.FFMPEG.dll</HintPath>
       <Private>False</Private>
     </Reference>
@@ -155,13 +155,13 @@
     <Reference Include="Cognex.VisionPro.ImageFile, Version=45.0.0.0, Culture=neutral, PublicKeyToken=ef0f902af9dee505, processorArchitecture=x86">
       <HintPath>..\..\Comun\VA\Cognex\Cognex.VisionPro.ImageFile.dll</HintPath>
     </Reference>
-    <Reference Include="Orbita.BBDD, Version=12.361.3.1, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="Orbita.BBDD, Version=13.32.3.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.BBDD.dll</HintPath>
     </Reference>
-    <Reference Include="Orbita.Trazabilidad, Version=12.361.5.1, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="Orbita.Trazabilidad, Version=13.32.3.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.Trazabilidad.dll</HintPath>
     </Reference>
-    <Reference Include="Orbita.Utiles, Version=13.11.8.1, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="Orbita.Utiles, Version=13.43.8.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
     </Reference>
     <Reference Include="System" />
