--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Orbita.Controles.VA.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.VA/Orbita.Controles.VA.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Base\Formularios\FrmDialogoBase.designer.cs">
       <DependentUpon>FrmDialogoBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogos\Componentes\ONotifyIcon.cs" />
     <Compile Include="Dialogos\Formularios\FrmInputTextBox.cs">
       <SubType>Form</SubType>
     </Compile>
