--- a/CodigoFuente/x32/Orbita.VA/Orbita.VA.GeneradorEscenarios/Orbita.VA.GeneradorEscenarios.csproj
+++ b/CodigoFuente/x32/Orbita.VA/Orbita.VA.GeneradorEscenarios/Orbita.VA.GeneradorEscenarios.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Reference Include="Orbita.Utiles, Version=13.43.8.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
