--- a/CodigoFuente/x32/Orbita.VA/Orbita.VA.MaquinasEstados/Orbita.VA.MaquinasEstados.csproj
+++ b/CodigoFuente/x32/Orbita.VA/Orbita.VA.MaquinasEstados/Orbita.VA.MaquinasEstados.csproj
@@ -144,9 +144,11 @@
   <ItemGroup>
     <Reference Include="Orbita.BBDD, Version=13.32.3.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.BBDD.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="Orbita.Utiles, Version=13.43.8.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="System">
       <Private>False</Private>
