--- a/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
@@ -153,22 +153,22 @@
     <Compile Include="Dispositivos\ODispositivoILBKPhoenix.cs" />
     <Compile Include="Dispositivos\ODispositivoMCUSB.cs" />
     <Compile Include="Dispositivos\ODispositivoSiemens1200ES.cs" />
-    <Compile Include="Protocolos\ModBusTCP\OModbusTCP.cs" />
+    <Compile Include="Protocolos\ModBusTCP\OProtocoloModbusTCP.cs" />
     <Compile Include="Protocolos\OPC\Constantes\Constantes.cs" />
     <Compile Include="Protocolos\OPC\Info\OOPCEnlaces.cs" />
-    <Compile Include="Protocolos\Phoenix\ProtocoloTCPPhoenixES.cs" />
+    <Compile Include="Protocolos\Phoenix\OProtocoloTCPPhoenixES.cs" />
     <Compile Include="Protocolos\Protocolo.cs" />
-    <Compile Include="Protocolos\Siemens\ProtocoloTCPSiemens.cs" />
-    <Compile Include="Protocolos\Siemens\ProtocoloTCPSiemensGateOCRES.cs" />
-    <Compile Include="Protocolos\Siemens\ProtocoloTCPSiemensGateOSES.cs" />
-    <Compile Include="Protocolos\Siemens\ProtocoloTCPSiemensGateTrafficES.cs" />
-    <Compile Include="Protocolos\WinCC\OWinCCDataManager.cs" />
+    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemens.cs" />
+    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateOCRES.cs" />
+    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateOSES.cs" />
+    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateTrafficES.cs" />
+    <Compile Include="Protocolos\WinCC\OProtocoloWinCCDataManager.cs" />
     <Compile Include="Puertos\OConfiguracionPuerto.cs" />
     <Compile Include="Puertos\OInformacionPuerto.cs" />
     <Compile Include="Puertos\OPuertoComunicaciones.cs" />
-    <Compile Include="Protocolos\Ftp\OFtp.cs" />
-    <Compile Include="Protocolos\Http\OHttp.cs" />
-    <Compile Include="Protocolos\NTP\ONTP.cs" />
+    <Compile Include="Protocolos\Ftp\OProtocoloFtp.cs" />
+    <Compile Include="Protocolos\Http\OProtocoloHttp.cs" />
+    <Compile Include="Protocolos\NTP\OProtocoloNTP.cs" />
     <Compile Include="Dispositivos\Colecciones\OTags.cs" />
     <Compile Include="Dispositivos\ODispositivoTCP.cs" />
     <Compile Include="Dispositivos\PDISO16.cs" />
@@ -219,6 +219,9 @@
       <Project>{71BD7FF7-F873-49B9-8DC2-C41F909D7300}</Project>
       <Name>Orbita.Winsock</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagramComunicaciones.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
